# Sentinels-of-Integrity

./: .gitignore  DEPLOYMENT_GCP.md  Design.txt  LICENSE  Logs  PRD.txt  README.md  RUN_PROJECT.bat  Sync_To_GitHub.bat  TechStack.txt  background_autosync.py  demo.py  index.html  keep_api_alive.bat  pyproject.toml  start_api_background.bat  stop_api.bat  visual_demo.html
api/: .env.example  Dockerfile  requirements.txt
api/app/: config.py  main.py
api/rust_core/: Cargo.toml
api/rust_core/src/: encryption.rs  hasher.rs  lib.rs  signer.rs
api/rust_core/tests/: core_tests.rs
contracts/: hardhat.config.js  package.json
contracts/scripts/: deploy.js
contracts/solidity/: ContentRegistry.sol  IntegrityHash.sol  MerkleProof.sol  MultiSigValidator.sol  ZKVerifier.sol
contracts/watermark/: __init__.py  embedder.py  extractor.py  steganography.py
docs/: api_reference.md  architecture.md  deployment_guide.md  extension_guide.md  ml_model_docs.md  security_model.md  smart_contracts.md  testing_guide.md
extension/: package.json  vite.config.js
extension/public/: manifest.json  popup.html
infra/: docker-compose.yml
infra/k8s/: api-deployment.yaml  ml-deployment.yaml  redis-deployment.yaml
infra/logging/: worm-config.yaml
infra/monitoring/: falco-rules.yaml  prometheus.yml
infra/security/: snyk-policy.yml  trivy-config.yaml
ml_models/: config.py  main.py  requirements.txt
ml_models/adversarial/: __init__.py  art_defense.py
ml_models/inference/: pipeline.py  trust_scorer.py
ml_models/models/: ensemble.py  (+3 more)
shared/: README.md
tests/: conftest.py
(+68 files in other folders)
